--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -647,19 +647,20 @@ body {
                         position: absolute;
                         @include adaptiveBottom(-76, -10);
                         @include adaptiveLeft(-288, -140);
-                        @include adaptiveWidth(2496, 320);
+                        @include adaptiveWidth(2496, 800);
                         @include adaptiveHeight(1080, 400);
                         background: url("../img/waves/wave-paint.png") center bottom / 25% 25% repeat-x;
-                        animation-name: wave-6-anim;
-                        animation-duration: 4s;
-                        animation-iteration-count: infinite;
-                        animation-timing-function: linear;
+
+                        -webkit-animation-name: wave-6-anim;
+                        -webkit-animation-duration: 4s;
+                        -webkit-animation-iteration-count: infinite;
+                        -webkit-animation-timing-function: linear;
                         @keyframes wave-6-anim {
                             0% {
-                                transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
+                                -webkit-transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
                             }
                             100% {
-                                transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
+                                -webkit-transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
                             }
                         }
                     }
