--- a/css/style.css
+++ b/css/style.css
@@ -697,20 +697,20 @@ body .wrapper .container .parralax__wave-6 .img-w {
 		position: absolute;
 		bottom: calc( (((-66) * ((100vw - 320px) * 100) / (1600)) / 100) + -10px );
 		left: calc( (((-148) * ((100vw - 320px) * 100) / (1600)) / 100) + -140px );
-		width: calc( (((2176) * ((100vw - 320px) * 100) / (1600)) / 100) + 320px );
+		width: calc( (((1696) * ((100vw - 320px) * 100) / (1600)) / 100) + 800px );
 		height: calc( (((680) * ((100vw - 320px) * 100) / (1600)) / 100) + 400px );
 		background: url("../img/waves/wave-paint.png") center bottom/25% 25% repeat-x;
-		animation-name: wave-6-anim;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
+		-webkit-animation-name: wave-6-anim;
+		-webkit-animation-duration: 4s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
 }
 @keyframes wave-6-anim {
 		0% {
-				transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
+				-webkit-transform: rotateZ(0) translate3d(0, 2%, 0) rotateZ(0);
 		}
 		100% {
-				transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
+				-webkit-transform: rotateZ(-360deg) translate3d(0, 2%, 0) rotateZ(360deg);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
