--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body .wrapper {
 		width: 100vw;
 		height: 100vh;
 		opacity: 0;
-		transition: all 1s ease 0s;
+		transition: all 1s ease 0.5s;
 }
 body .wrapper .container {
 		width: 100vw;
@@ -224,207 +224,25 @@ body .wrapper .container .parralax__rope-1 {
 		height: 100%;
 }
 body .wrapper .container .parralax__rope-1 .rope1-wrapper {
-		display: none;
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .rope {
-		transition: all 1s ease 1s;
-		position: absolute;
-		top: -5%;
-		left: -15%;
-		width: 130%;
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .rope.active {
-		transform: translateY(0);
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .birds {
-		position: absolute;
-		top: calc( (((184) * ((100vw - 320px) * 100) / (1600)) / 100) + -100px );
-		transform: scale(1);
-		left: 80%;
-		width: 20%;
-		animation-duration: 4s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-1-birds-anim {
-		0% {
-				transform: rotateZ(-10deg);
-		}
-		100% {
-				transform: rotateZ(10deg);
-		}
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-1 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 50%;
-		transform: scale(1);
-		width: 20%;
-		animation-duration: 6s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-1-cloud-1-anim {
-		0% {
-				transform: rotateZ(-10deg);
-		}
-		100% {
-				transform: rotateZ(10deg);
-		}
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-2 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 50%;
-		transform: scale(1);
-		width: 20%;
-		animation-duration: 5s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-1-cloud-2-anim {
-		0% {
-				transform: rotateZ(10deg);
-		}
-		100% {
-				transform: rotateZ(-10deg);
-		}
-}
-body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-3 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 50%;
-		transform: scale(1);
-		width: 20%;
-		animation-duration: 4s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-1-cloud-2-anim {
-		0% {
-				transform: rotateZ(10deg);
-		}
-		100% {
-				transform: rotateZ(-10deg);
-		}
-}
-body .wrapper .container .parralax__rope-2 {
-		width: 100%;
-		height: 100%;
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper {
-		display: none;
-		position: absolute;
-		top: 0%;
-		left: 0;
-		width: 100%;
-		height: 100%;
-}
-@media only screen and (orientation: portrait) {
-		body .wrapper .container .parralax__rope-2 .rope2-wrapper {
-				top: 18%;
-		}
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper .rope {
-		transition: all 1s ease 1.3s;
-		position: absolute;
-		left: -15%;
-		width: 130%;
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper .rope.active {
-		transform: translateY(0);
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-1 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 80%;
-		transform: scale(0.8);
-		width: 20%;
-		animation-duration: 8s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-2-cloud-1-anim {
-		0% {
-				transform: rotateZ(10deg);
-		}
-		100% {
-				transform: rotateZ(-10deg);
-		}
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-2 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 80%;
-		transform: scale(0.8);
-		width: 20%;
-		animation-duration: 7s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-2-cloud-2-anim {
-		0% {
-				transform: rotateZ(-10deg);
-		}
-		100% {
-				transform: rotateZ(10deg);
-		}
-}
-body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-3 {
-		border: 1px solid red;
-		position: absolute;
-		top: calc( (((180) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
-		left: 80%;
-		transform: scale(0.8);
-		width: 20%;
-		animation-duration: 7s;
-		transform-origin: top center;
-		animation-iteration-count: infinite;
-		animation-direction: alternate;
-}
-@keyframes rope-2-cloud-2-anim {
-		0% {
-				transform: rotateZ(-10deg);
-		}
-		100% {
-				transform: rotateZ(10deg);
-		}
-}
-body .wrapper .container .parralax__rope-3 {
-		width: 100%;
-		height: 100%;
-}
-body .wrapper .container .parralax__rope-3 .rope3-wrapper {
 		position: absolute;
 		top: 6%;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transition: all 1s ease 1.6s;
+		transition: all 1s ease 2s;
 		transform: translateY(-50%);
 }
 @media only screen and (orientation: portrait) {
-		body .wrapper .container .parralax__rope-3 .rope3-wrapper {
-				top: 25%;
+		body .wrapper .container .parralax__rope-1 .rope1-wrapper {
+				top: 20%;
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .rope {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .rope {
 		position: absolute;
 		left: -15%;
 		width: 130%;
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .birds {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .birds-1 {
 		position: absolute;
 		top: calc( (((100) * ((100vw - 320px) * 100) / (1600)) / 100) + 20px );
 		transform: scale(0.6);
@@ -456,11 +274,11 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .birds {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-1 {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-1 {
 		position: absolute;
-		top: calc( (((146) * ((100vw - 320px) * 100) / (1600)) / 100) + 29px );
+		top: calc( (((154) * ((100vw - 320px) * 100) / (1600)) / 100) + 31px );
 		transform: scale(0.6);
-		left: 10%;
+		left: 15%;
 		width: 20%;
 		animation-name: rope-3-cloud-1-anim;
 		animation-duration: 6s;
@@ -488,7 +306,7 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-1 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-2 {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-2 {
 		position: absolute;
 		top: calc( (((177) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
 		transform: scale(0.6);
@@ -520,7 +338,39 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-2 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-3 {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .birds-2 {
+		position: absolute;
+		top: calc( (((175) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
+		transform: scale(0.6);
+		left: 48%;
+		width: 20%;
+		animation-name: rope-3-birds-anim;
+		animation-duration: 4s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-3-birds-anim {
+				0% {
+						transform: scale(0.6) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(0.6) rotateZ(10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-3-birds-anim {
+				0% {
+						transform: scale(1) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(1) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-3 {
 		position: absolute;
 		top: calc( (((167) * ((100vw - 320px) * 100) / (1600)) / 100) + 33px );
 		transform: scale(0.6);
@@ -552,7 +402,7 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-3 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-4 {
+body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-4 {
 		position: absolute;
 		top: calc( (((101) * ((100vw - 320px) * 100) / (1600)) / 100) + 20px );
 		transform: scale(0.6);
@@ -581,6 +431,282 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-4 {
 				}
 				100% {
 						transform: scale(1) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-1 .rope1-wrapper.active {
+		transform: translateY(0);
+}
+body .wrapper .container .parralax__rope-2 {
+		width: 100%;
+		height: 100%;
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper {
+		position: absolute;
+		top: -2%;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(-50%);
+		transition: all 1s ease 3s;
+}
+@media only screen and (orientation: portrait) {
+		body .wrapper .container .parralax__rope-2 .rope2-wrapper {
+				top: 15%;
+		}
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper .rope {
+		position: absolute;
+		left: -15%;
+		width: 130%;
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-1 {
+		position: absolute;
+		top: calc( (((136) * ((100vw - 320px) * 100) / (1600)) / 100) + 27px );
+		left: 7%;
+		transform: scale(0.7);
+		width: 20%;
+		animation-name: rope-2-cloud-1-anim;
+		animation-duration: 8s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-2-cloud-1-anim {
+				0% {
+						transform: scale(0.7) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(0.7) rotateZ(-10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-2-cloud-1-anim {
+				0% {
+						transform: scale(1.1) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(1.1) rotateZ(-10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-2 {
+		position: absolute;
+		top: calc( (((177) * ((100vw - 320px) * 100) / (1600)) / 100) + 35px );
+		left: 40%;
+		transform: scale(0.7);
+		width: 20%;
+		animation-name: rope-2-cloud-2-anim;
+		animation-duration: 7s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-2-cloud-2-anim {
+				0% {
+						transform: scale(0.7) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(0.7) rotateZ(10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-2-cloud-2-anim {
+				0% {
+						transform: scale(1.1) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(1.1) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-3 {
+		position: absolute;
+		top: calc( (((130) * ((100vw - 320px) * 100) / (1600)) / 100) + 26px );
+		left: 75%;
+		transform: scale(0.7);
+		width: 20%;
+		animation-name: rope-2-cloud-2-anim;
+		animation-duration: 7s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-2-cloud-2-anim {
+				0% {
+						transform: scale(0.7) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(0.7) rotateZ(10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-2-cloud-2-anim {
+				0% {
+						transform: scale(1.1) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(1.1) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-2 .rope2-wrapper.active {
+		transform: translateY(0);
+}
+body .wrapper .container .parralax__rope-3 {
+		width: 100%;
+		height: 100%;
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper {
+		position: absolute;
+		top: -10%;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(-50%);
+		transition: all 1s ease 4s;
+}
+@media only screen and (orientation: portrait) {
+		body .wrapper .container .parralax__rope-3 .rope3-wrapper {
+				top: 10%;
+		}
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper .rope {
+		position: absolute;
+		left: -15%;
+		width: 130%;
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper .birds {
+		position: absolute;
+		top: calc( (((117) * ((100vw - 320px) * 100) / (1600)) / 100) + 23px );
+		left: 80%;
+		transform: scale(0.8);
+		width: 20%;
+		animation-name: rope-1-birds-anim;
+		animation-duration: 4s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-1-birds-anim {
+				0% {
+						transform: scale(0.8) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(0.8) rotateZ(10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-1-birds-anim {
+				0% {
+						transform: scale(1.2) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(1.2) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-1 {
+		position: absolute;
+		top: calc( (((100) * ((100vw - 320px) * 100) / (1600)) / 100) + 20px );
+		left: -5%;
+		transform: scale(0.8);
+		width: 20%;
+		animation-name: rope-1-cloud-1-anim;
+		animation-duration: 6s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-1-cloud-1-anim {
+				0% {
+						transform: scale(0.8) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(0.8) rotateZ(10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-1-cloud-1-anim {
+				0% {
+						transform: scale(1.2) rotateZ(-10deg);
+				}
+				100% {
+						transform: scale(1.2) rotateZ(10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-2 {
+		position: absolute;
+		top: calc( (((170) * ((100vw - 320px) * 100) / (1600)) / 100) + 34px );
+		left: 25%;
+		transform: scale(0.8);
+		width: 20%;
+		animation-name: rope-1-cloud-2-anim;
+		animation-duration: 5s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-1-cloud-2-anim {
+				0% {
+						transform: scale(0.8) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(0.8) rotateZ(-10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-1-cloud-2-anim {
+				0% {
+						transform: scale(1.2) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(1.2) rotateZ(-10deg);
+				}
+		}
+}
+body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-3 {
+		position: absolute;
+		top: calc( (((171) * ((100vw - 320px) * 100) / (1600)) / 100) + 34px );
+		left: 55%;
+		transform: scale(0.8);
+		width: 20%;
+		animation-name: rope-1-cloud-2-anim;
+		animation-duration: 4s;
+		transform-origin: top center;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+}
+@media only screen and (orientation: landscape) {
+		@keyframes rope-1-cloud-2-anim {
+				0% {
+						transform: scale(0.8) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(0.8) rotateZ(-10deg);
+				}
+		}
+}
+@media only screen and (orientation: portrait) {
+		@keyframes rope-1-cloud-2-anim {
+				0% {
+						transform: scale(1.2) rotateZ(10deg);
+				}
+				100% {
+						transform: scale(1.2) rotateZ(-10deg);
 				}
 		}
 }
@@ -768,7 +894,23 @@ body .wrapper .container .parralax__wave-6 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-6 .img-w {
+body .wrapper .container .parralax__wave-6 .img-wrapper {
+		width: 100%;
+		height: 100%;
+		animation-name: wave-6-anim;
+		animation-duration: 4s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
+}
+@keyframes wave-6-anim {
+		0% {
+				transform: rotateZ(0) translate3d(0, 10%, 0) rotateZ(0);
+		}
+		100% {
+				transform: rotateZ(-360deg) translate3d(0, 10%, 0) rotateZ(360deg);
+		}
+}
+body .wrapper .container .parralax__wave-6 .img-wrapper .img-w {
 		position: absolute;
 		bottom: -6%;
 		left: -25%;
@@ -776,18 +918,6 @@ body .wrapper .container .parralax__wave-6 .img-w {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		-webkit-animation-name: wave-6-anim;
-		-webkit-animation-duration: 4s;
-		-webkit-animation-iteration-count: infinite;
-		-webkit-animation-timing-function: linear;
-}
-@keyframes wave-6-anim {
-		0% {
-				-webkit-transform: rotateZ(0) translate3d(0, 10%, 0) rotateZ(0);
-		}
-		100% {
-				-webkit-transform: rotateZ(-360deg) translate3d(0, 10%, 0) rotateZ(360deg);
-		}
 }
 body .wrapper .container .parralax__liighthouse {
 		width: 100%;
@@ -795,7 +925,7 @@ body .wrapper .container .parralax__liighthouse {
 }
 body .wrapper .container .parralax__liighthouse .img-l {
 		position: absolute;
-		transition: all 1s ease 2.5s;
+		transition: all 1s ease 5s;
 		bottom: -40%;
 		left: 65%;
 		width: 25%;
