--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -156,7 +156,7 @@ body {
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        transition: all 1s ease 2s;
+                        transition: all 1s ease 1s;
                         transform: translateY(-50%);
 
                         .rope {
@@ -382,7 +382,7 @@ body {
                         width: 100%;
                         height: 100%;
                         transform: translateY(-50%);
-                        transition: all 1s ease 3s;
+                        transition: all 1s ease 1.5s;
 
                         .rope {
                             position: absolute;
@@ -510,7 +510,7 @@ body {
                         width: 100%;
                         height: 100%;
                         transform: translateY(-50%);
-                        transition: all 1s ease 4s;
+                        transition: all 1s ease 2s;
 
                         .rope {
                             position: absolute;
@@ -874,13 +874,17 @@ body {
                         animation-duration: 4s;
                         animation-iteration-count: infinite;
                         animation-timing-function: linear;
+                        // animation-direction: alternate-reverse;
 
                         @keyframes wave-6-anim {
                             0% {
-                                transform: rotateZ(0) translate3d(0, 10%, 0) rotateZ(0);
+                                transform: rotateZ(0deg) translateY(10%) rotateZ(0deg);
+                                // transform: rotateZ(0) translate3d(0, 10%, 0) rotateZ(0);
                             }
                             100% {
-                                transform: rotateZ(-360deg) translate3d(0, 10%, 0) rotateZ(360deg);
+                                transform: rotateZ(-360deg) translateY(10%) rotateZ(360deg);
+
+                                // transform: rotateZ(-360deg) translate3d(0, 10%, 0) rotateZ(360deg);
                             }
                         }
                     }
@@ -891,7 +895,8 @@ body {
                     height: 100%;
                     .img-l {
                         position: absolute;
-                        transition: all 1s ease 5s;
+
+                        transition: all 1s ease 2.5s;
                         bottom: -40%;
                         left: 65%;
                         width: 25%;
