--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body .wrapper .container .parralax__rope-1 .rope1-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transition: all 1s ease 2s;
+		transition: all 1s ease 1s;
 		transform: translateY(-50%);
 }
 @media only screen and (orientation: portrait) {
@@ -444,7 +444,7 @@ body .wrapper .container .parralax__rope-2 .rope2-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		transition: all 1s ease 3s;
+		transition: all 1s ease 1.5s;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-2 .rope2-wrapper {
@@ -566,7 +566,7 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		transition: all 1s ease 4s;
+		transition: all 1s ease 2s;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-3 .rope3-wrapper {
@@ -898,10 +898,10 @@ body .wrapper .container .parralax__wave-6 .img-w {
 }
 @keyframes wave-6-anim {
 		0% {
-				transform: rotateZ(0) translate3d(0, 10%, 0) rotateZ(0);
+				transform: rotateZ(0deg) translateY(10%) rotateZ(0deg);
 		}
 		100% {
-				transform: rotateZ(-360deg) translate3d(0, 10%, 0) rotateZ(360deg);
+				transform: rotateZ(-360deg) translateY(10%) rotateZ(360deg);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
@@ -910,7 +910,7 @@ body .wrapper .container .parralax__liighthouse {
 }
 body .wrapper .container .parralax__liighthouse .img-l {
 		position: absolute;
-		transition: all 1s ease 5s;
+		transition: all 1s ease 2.5s;
 		bottom: -40%;
 		left: 65%;
 		width: 25%;
