--- a/css/style.css
+++ b/css/style.css
@@ -125,9 +125,25 @@ body .wrapper .container .parralax__bg .img {
 				transform: scale(1);
 		}
 }
-body .wrapper .container .parralax__bg .light-1 {
-		bottom: -20%;
-		transition: all 2s ease 2s;
+body .wrapper .container .parralax__bg .light-1-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: light-popup 0.5s linear 2.5s 1 forwards;
+}
+@keyframes light-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__bg .light-1-wrapper .light-1 {
+		bottom: 16%;
 		position: absolute;
 		left: calc( (((435) * ((100vw - 320px) * 100) / (1600)) / 100) + 15px );
 		border-radius: 50%;
@@ -137,6 +153,7 @@ body .wrapper .container .parralax__bg .light-1 {
 		animation-name: light-1-anim;
 		animation-duration: 6s;
 		animation-iteration-count: infinite;
+		animation-delay: 3;
 }
 @keyframes light-1-anim {
 		0% {
@@ -152,12 +169,25 @@ body .wrapper .container .parralax__bg .light-1 {
 				opacity: 1;
 		}
 }
-body .wrapper .container .parralax__bg .light-1.active {
-		bottom: calc( (((40) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
+body .wrapper .container .parralax__bg .light-2-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: light-popup 0.5s linear 2.3s 1 forwards;
 }
-body .wrapper .container .parralax__bg .light-2 {
-		bottom: -20%;
-		transition: all 2s ease 2s;
+@keyframes light-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__bg .light-2-wrapper .light-2 {
+		bottom: 16%;
 		position: absolute;
 		left: 50%;
 		border-radius: 50%;
@@ -167,6 +197,7 @@ body .wrapper .container .parralax__bg .light-2 {
 		animation-name: light-2-anim;
 		animation-duration: 8s;
 		animation-iteration-count: infinite;
+		animation-delay: 3;
 }
 @keyframes light-2-anim {
 		0% {
@@ -182,12 +213,25 @@ body .wrapper .container .parralax__bg .light-2 {
 				opacity: 1;
 		}
 }
-body .wrapper .container .parralax__bg .light-2.active {
-		bottom: calc( (((40) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
+body .wrapper .container .parralax__bg .light-3-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: light-popup 0.5s linear 2.8s 1 forwards;
 }
-body .wrapper .container .parralax__bg .light-3 {
-		bottom: -20%;
-		transition: all 2s ease 2s;
+@keyframes light-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__bg .light-3-wrapper .light-3 {
+		bottom: 16%;
 		position: absolute;
 		left: calc( (((1180) * ((100vw - 320px) * 100) / (1600)) / 100) + 320px );
 		border-radius: 50%;
@@ -197,6 +241,7 @@ body .wrapper .container .parralax__bg .light-3 {
 		animation-name: light-3-anim;
 		animation-duration: 7s;
 		animation-iteration-count: infinite;
+		animation-delay: 3;
 }
 @keyframes light-3-anim {
 		0% {
@@ -212,9 +257,6 @@ body .wrapper .container .parralax__bg .light-3 {
 				opacity: 1;
 		}
 }
-body .wrapper .container .parralax__bg .light-3.active {
-		bottom: calc( (((40) * ((100vw - 320px) * 100) / (1600)) / 100) + 80px );
-}
 body .wrapper .container .parralax__rope-1 {
 		width: 100%;
 		height: 100%;
@@ -225,12 +267,20 @@ body .wrapper .container .parralax__rope-1 .rope1-wrapper {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transition: all 1s ease 1s;
 		transform: translateY(-50%);
+		animation: rope-popup 0.5s linear 1s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-1 .rope1-wrapper {
 				top: 20%;
+		}
+}
+@keyframes rope-popup {
+		0% {
+				transform: translateY(-50%);
+		}
+		100% {
+				transform: translateY(0%);
 		}
 }
 body .wrapper .container .parralax__rope-1 .rope1-wrapper .rope {
@@ -430,9 +480,6 @@ body .wrapper .container .parralax__rope-1 .rope1-wrapper .cloud-4 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-1 .rope1-wrapper.active {
-		transform: translateY(0);
-}
 body .wrapper .container .parralax__rope-2 {
 		width: 100%;
 		height: 100%;
@@ -444,11 +491,19 @@ body .wrapper .container .parralax__rope-2 .rope2-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		transition: all 1s ease 1.5s;
+		animation: rope-popup 0.5s linear 1.5s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-2 .rope2-wrapper {
 				top: 15%;
+		}
+}
+@keyframes rope-popup {
+		0% {
+				transform: translateY(-50%);
+		}
+		100% {
+				transform: translateY(0%);
 		}
 }
 body .wrapper .container .parralax__rope-2 .rope2-wrapper .rope {
@@ -552,9 +607,6 @@ body .wrapper .container .parralax__rope-2 .rope2-wrapper .cloud-3 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-2 .rope2-wrapper.active {
-		transform: translateY(0);
-}
 body .wrapper .container .parralax__rope-3 {
 		width: 100%;
 		height: 100%;
@@ -566,11 +618,19 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		transition: all 1s ease 2s;
+		animation: rope-popup 0.5s linear 2s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-3 .rope3-wrapper {
 				top: 10%;
+		}
+}
+@keyframes rope-popup {
+		0% {
+				transform: translateY(-50%);
+		}
+		100% {
+				transform: translateY(0%);
 		}
 }
 body .wrapper .container .parralax__rope-3 .rope3-wrapper .rope {
@@ -706,14 +766,12 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper .cloud-3 {
 				}
 		}
 }
-body .wrapper .container .parralax__rope-3 .rope3-wrapper.active {
-		transform: translateY(0);
-}
 body .wrapper .container .parralax__wave-1 {
 		width: 100%;
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-1 .img-w {
+		display: none;
 		position: absolute;
 		bottom: 9%;
 		left: -70%;
@@ -748,6 +806,7 @@ body .wrapper .container .parralax__wave-2 {
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-2 .img-w {
+		display: none;
 		position: absolute;
 		bottom: 6%;
 		left: -55%;
@@ -782,6 +841,7 @@ body .wrapper .container .parralax__wave-3 {
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-3 .img-w {
+		display: none;
 		position: absolute;
 		bottom: 3%;
 		left: -40%;
@@ -816,6 +876,7 @@ body .wrapper .container .parralax__wave-4 {
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-4 .img-w {
+		display: none;
 		position: absolute;
 		bottom: 0%;
 		left: -35%;
@@ -850,6 +911,7 @@ body .wrapper .container .parralax__wave-5 {
 		height: 100%;
 }
 body .wrapper .container .parralax__wave-5 .img-w {
+		display: none;
 		position: absolute;
 		bottom: -3%;
 		left: -30%;
@@ -891,36 +953,49 @@ body .wrapper .container .parralax__wave-6 .img-w {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation-name: wave-6-anim;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
+		-webkit-animation-name: wave-6-anim;
+		-webkit-animation-duration: 4s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
 }
 @keyframes wave-6-anim {
 		0% {
-				transform: rotateZ(0deg) translateY(10%) rotateZ(0deg);
+				-webkit-transform: rotateZ(0deg) translateY(10%) rotateZ(0deg);
 		}
 		100% {
-				transform: rotateZ(-360deg) translateY(10%) rotateZ(360deg);
+				-webkit-transform: rotateZ(-360deg) translateY(10%) rotateZ(360deg);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__liighthouse .img-l {
+body .wrapper .container .parralax__liighthouse .lighthouse-wrapper {
 		position: absolute;
-		transition: all 1s ease 2.5s;
-		bottom: -40%;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 3.5s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__liighthouse .lighthouse-wrapper .lighthouse {
+		position: absolute;
+		bottom: 7%;
 		left: 65%;
 		width: 25%;
 		height: 40%;
 		background: url("../img/lighthouse.png") center bottom/100% 100% no-repeat;
 		background-size: contain;
-		animation-name: liighthouse-anim;
-		animation-duration: 8s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
+		animation: liighthouse-anim 8s linear 0s infinite;
 }
 @keyframes liighthouse-anim {
 		0% {
@@ -933,12 +1008,14 @@ body .wrapper .container .parralax__liighthouse .img-l {
 				transform: rotateZ(-10deg) rotateX(0deg) translate3d(-10%, 5%, 0);
 		}
 }
-body .wrapper .container .parralax__liighthouse .img-l .light {
+body .wrapper .container .parralax__liighthouse .lighthouse-wrapper .lighthouse .light {
 		display: inline;
 		position: absolute;
+		width: 1px;
+		height: 1px;
 		top: 25%;
 		left: 50%;
-		box-shadow: calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px) calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px) calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 150px) calc((((40) * ((100vw - 320px) * 100) / (1600)) / 100) + 60px) rgba(255, 0, 221, 0.637);
+		box-shadow: calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px) calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 0px) calc((((0) * ((100vw - 320px) * 100) / (1600)) / 100) + 150px) calc((((40) * ((100vw - 320px) * 100) / (1600)) / 100) + 60px) rgba(255, 0, 221, 0.767);
 		animation-name: light-anim;
 		animation-duration: 6s;
 		animation-iteration-count: infinite;
@@ -956,9 +1033,6 @@ body .wrapper .container .parralax__liighthouse .img-l .light {
 				transform: scale(1);
 				opacity: 0.4;
 		}
-}
-body .wrapper .container .parralax__liighthouse .img-l.active {
-		bottom: 7%;
 }
 body .wrapper.active {
 		opacity: 1;
