--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,16 @@ body {
 body .wrapper {
 		width: 100vw;
 		height: 100vh;
-		opacity: 0;
 		transition: all 1s ease 0.5s;
+		animation: wrapper-popup 1s linear 0s 1 forwards;
+}
+@keyframes wrapper-popup {
+		0% {
+				opacity: 0;
+		}
+		100% {
+				opacity: 1;
+		}
 }
 body .wrapper .container .parralax {
 		position: relative;
@@ -132,7 +140,7 @@ body .wrapper .container .parralax__bg .light-1-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(50%);
-		animation: light-popup 0.5s linear 2.5s 1 forwards;
+		animation: light-popup 0.5s linear 3.5s 1 forwards;
 }
 @keyframes light-popup {
 		0% {
@@ -176,7 +184,7 @@ body .wrapper .container .parralax__bg .light-2-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(50%);
-		animation: light-popup 0.5s linear 2.3s 1 forwards;
+		animation: light-popup 0.5s linear 3.7s 1 forwards;
 }
 @keyframes light-popup {
 		0% {
@@ -220,7 +228,7 @@ body .wrapper .container .parralax__bg .light-3-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(50%);
-		animation: light-popup 0.5s linear 2.8s 1 forwards;
+		animation: light-popup 0.5s linear 4s 1 forwards;
 }
 @keyframes light-popup {
 		0% {
@@ -268,7 +276,7 @@ body .wrapper .container .parralax__rope-1 .rope1-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		animation: rope-popup 0.5s linear 1s 1 forwards;
+		animation: rope-popup 0.5s linear 2s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-1 .rope1-wrapper {
@@ -491,7 +499,7 @@ body .wrapper .container .parralax__rope-2 .rope2-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		animation: rope-popup 0.5s linear 1.5s 1 forwards;
+		animation: rope-popup 0.5s linear 2.5s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-2 .rope2-wrapper {
@@ -618,7 +626,7 @@ body .wrapper .container .parralax__rope-3 .rope3-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(-50%);
-		animation: rope-popup 0.5s linear 2s 1 forwards;
+		animation: rope-popup 0.5s linear 3s 1 forwards;
 }
 @media only screen and (orientation: portrait) {
 		body .wrapper .container .parralax__rope-3 .rope3-wrapper {
@@ -770,8 +778,24 @@ body .wrapper .container .parralax__wave-1 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-1 .img-w {
-		display: none;
+body .wrapper .container .parralax__wave-1 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 1.5s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 9%;
 		left: -70%;
@@ -793,7 +817,7 @@ body .wrapper .container .parralax__wave-1 .img-w {
 				transform: scale(0.5) rotateZ(360deg) translate3d(0, 5%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-1 .img-w .black {
+body .wrapper .container .parralax__wave-1 .wave-wrapper .wave-img .black {
 		position: absolute;
 		width: 130%;
 		height: 20%;
@@ -805,8 +829,24 @@ body .wrapper .container .parralax__wave-2 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-2 .img-w {
-		display: none;
+body .wrapper .container .parralax__wave-2 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 1.3s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 6%;
 		left: -55%;
@@ -828,7 +868,7 @@ body .wrapper .container .parralax__wave-2 .img-w {
 				transform: scale(0.6) rotateZ(360deg) translate3d(0, 6%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-2 .img-w .black {
+body .wrapper .container .parralax__wave-2 .wave-wrapper .wave-img .black {
 		position: absolute;
 		width: 130%;
 		height: 20%;
@@ -840,8 +880,24 @@ body .wrapper .container .parralax__wave-3 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-3 .img-w {
-		display: none;
+body .wrapper .container .parralax__wave-3 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 1.1s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 3%;
 		left: -40%;
@@ -863,7 +919,7 @@ body .wrapper .container .parralax__wave-3 .img-w {
 				transform: scale(0.7) rotateZ(360deg) translate3d(0, 7%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-3 .img-w .black {
+body .wrapper .container .parralax__wave-3 .wave-wrapper .wave-img .black {
 		position: absolute;
 		width: 130%;
 		height: 20%;
@@ -875,8 +931,24 @@ body .wrapper .container .parralax__wave-4 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-4 .img-w {
-		display: none;
+body .wrapper .container .parralax__wave-4 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 0.9s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__wave-4 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: 0%;
 		left: -35%;
@@ -898,7 +970,7 @@ body .wrapper .container .parralax__wave-4 .img-w {
 				transform: scale(0.8) rotateZ(360deg) translate3d(0, 8%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-4 .img-w .black {
+body .wrapper .container .parralax__wave-4 .wave-wrapper .wave-img .black {
 		position: absolute;
 		width: 130%;
 		height: 20%;
@@ -910,8 +982,24 @@ body .wrapper .container .parralax__wave-5 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-5 .img-w {
-		display: none;
+body .wrapper .container .parralax__wave-5 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transform: translateY(50%);
+		animation: liighthouse-popup 0.5s linear 0.7s 1 forwards;
+}
+@keyframes liighthouse-popup {
+		0% {
+				transform: translateY(50%);
+		}
+		100% {
+				transform: translateY(0%);
+		}
+}
+body .wrapper .container .parralax__wave-5 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: -3%;
 		left: -30%;
@@ -933,7 +1021,7 @@ body .wrapper .container .parralax__wave-5 .img-w {
 				transform: scale(0.9) rotateZ(360deg) translate3d(0, 9%, 0) rotateZ(-360deg);
 		}
 }
-body .wrapper .container .parralax__wave-5 .img-w .black {
+body .wrapper .container .parralax__wave-5 .wave-wrapper .wave-img .black {
 		position: absolute;
 		width: 130%;
 		height: 100%;
@@ -945,7 +1033,14 @@ body .wrapper .container .parralax__wave-6 {
 		width: 100%;
 		height: 100%;
 }
-body .wrapper .container .parralax__wave-6 .img-w {
+body .wrapper .container .parralax__wave-6 .wave-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+}
+body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
 		position: absolute;
 		bottom: -6%;
 		left: -25%;
@@ -953,17 +1048,35 @@ body .wrapper .container .parralax__wave-6 .img-w {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		-webkit-animation-name: wave-6-anim;
-		-webkit-animation-duration: 4s;
-		-webkit-animation-iteration-count: infinite;
-		-webkit-animation-timing-function: linear;
+		animation: wave-6-anim 5s linear infinite;
 }
 @keyframes wave-6-anim {
 		0% {
-				-webkit-transform: rotateZ(0deg) translateY(10%) rotateZ(0deg);
+				transform: translate(0, 0);
+		}
+		12.5% {
+				transform: translate(10px, -15px);
+		}
+		25% {
+				transform: translate(20px, -20px);
+		}
+		37.5% {
+				transform: translate(30px, -15px);
+		}
+		50% {
+				transform: translate(40px, 0);
+		}
+		62.5% {
+				transform: translate(30px, 15px);
+		}
+		75% {
+				transform: translate(20px, 20px);
+		}
+		87.5% {
+				transform: translate(10px, 15px);
 		}
 		100% {
-				-webkit-transform: rotateZ(-360deg) translateY(10%) rotateZ(360deg);
+				transform: translate(0, 0);
 		}
 }
 body .wrapper .container .parralax__liighthouse {
@@ -977,7 +1090,7 @@ body .wrapper .container .parralax__liighthouse .lighthouse-wrapper {
 		width: 100%;
 		height: 100%;
 		transform: translateY(50%);
-		animation: liighthouse-popup 0.5s linear 3.5s 1 forwards;
+		animation: liighthouse-popup 0.5s linear 4.5s 1 forwards;
 }
 @keyframes liighthouse-popup {
 		0% {
@@ -1033,7 +1146,4 @@ body .wrapper .container .parralax__liighthouse .lighthouse-wrapper .lighthouse 
 				transform: scale(1);
 				opacity: 0.4;
 		}
-}
-body .wrapper.active {
-		opacity: 1;
 }
